--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -28,10 +28,45 @@
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary" style="width:100%">
         <a class="item" data-tab="main">Main</a>
-        <a class="item" data-tab="secundaries">Secundaries</a>
+        <a class="item" data-tab="secondaries">Secondaries</a>
         <a class="item" data-tab="combat">Combat</a>
         <a class="item" data-tab="mystic">Mystic</a>
 		<a class="item" data-tab="domine">Domine</a>
 		<a class="item" data-tab="elan">Elan</a>
     </nav>
+	
+	{{!-- Sheet Body --}}
+	<section class="sheet-body">
+        
+		{{!-- Main Tab --}}
+        <div class="tab main" data-group="primary" data-tab="main">
+            {{> "systems/animabf/templates/parts/main.html"}}
+        </div>
+
+		{{!-- Secondaries Tab --}}
+        <div class="tab secondaries" data-group="primary" data-tab="secondaries">
+          {{> "systems/animabf/templates/parts/secondaries.html"}}
+        </div>
+
+		{{!-- Combat Tab --}}
+        <div class="tab combat" data-group="primary" data-tab="combat">
+            {{> "systems/animabf/templates/parts/combat.html"}}
+        </div>
+
+		{{!-- Mystic Tab --}}
+        <div class="tab mystic" data-group="primary" data-tab="mystic">
+            {{> "systems/animabf/templates/parts/mystic.html"}}
+        </div>
+
+		{{!-- Domine Tab --}}
+        <div class="tab domine" data-group="primary" data-tab="domine">
+            {{> "systems/animabf/templates/parts/domine.html"}}
+        </div>
+
+		{{!-- Elan Tab --}}
+        <div class="tab elan" data-group="primary" data-tab="elan">
+            {{> "systems/animabf/templates/parts/elan.html"}}
+        </div>
+          
+    </section>
 </form>
