--- a/src/templates/parts/main.html
+++ b/src/templates/parts/main.html
@@ -1,1 +1,19 @@
-MAIN
+<div class="main">
+
+    <div class="attribute"></div>
+
+    <div class="common resources"></div>
+
+    <div class="destiny"></div>
+
+    <div class="resistencies"></div>
+
+    <div class="regeneration"></div>
+
+    <div class="movement"></div>
+
+    <div class="sindefinir"></div>
+
+    <div class="notes"></div>
+
+</div>
