--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -48,23 +48,18 @@
 				<input type="text" class="pen-phy" placeholder="Pen. fisico">
 			</div>
 		</div>
-	<header>
-	{{!-- Character Sheet Navigation --}}
-	<nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="main">Main</a>
-        <a class="item" data-tab="secondaries">Secondaries</a>
-        <a class="item" data-tab="combat">Combat</a>
-        <a class="item" data-tab="mystic">Mystic</a>
-		<a class="item" data-tab="domine">Domine</a>
-		<a class="item" data-tab="elan">Elan</a>
-    </nav>
-	{{!-- Sheet Body --}}
-	<section class="sheet-body">
-        
-		{{!-- Main Tab --}}
-        <div class="tab main" data-group="primary" data-tab="main">
-            {{> "systems/animabf/templates/parts/main.html"}}
-        </div>
+		<header>
+			{{!-- Character Sheet Navigation --}}
+			<nav class="sheet-tabs tabs" data-group="primary">
+				<a class="item" data-tab="main">{{localize "anima.main"}}</a>
+				<a class="item" data-tab="secondaries">{{localize "anima.secondaries"}}</a>
+				<a class="item" data-tab="combat">{{localize "anima.combat"}}</a>
+				<a class="item" data-tab="mystic">{{localize "anima.mystic"}}</a>
+				<a class="item" data-tab="domine">{{localize "anima.domine"}}</a>
+				<a class="item" data-tab="elan">{{localize "anima.elan"}}</a>
+			</nav>
+			{{!-- Sheet Body --}}
+			<section class="sheet-body">
 
 				{{!-- Main Tab --}}
 				<div class="tab main" data-group="primary" data-tab="main">
