--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -4,44 +4,56 @@
 		<div class="head grid">
 			<img class="profile" src="{{actor.img}}" title=" {{actor.name}}" data-edit="img">
 			<div class="summary grid">
-				<input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
-				<input name="data.description.race" type="text" value="{{data.description.race}}" placeholder="Race"/>
-				<input name="data.description.category" type="text" value="{{data.description.category}}" placeholder="Category"/>
-				<input name="data.description.background" type="text" value="{{data.description.background}}" placeholder="Background"/>
+				<div class="text_summary">
+					<span>{{localize "anima.name"}}: </span>
+					<input name="name" type="text" value="{{actor.name}}"/>
+				</div>
+				<div class="text_summary">
+					<span>{{localize "anima.race"}}: </span>
+					<input name="data.description.race" type="text" value="{{data.description.race}}"/>
+				</div>
+				<div class="text_summary">
+					<span>{{localize "anima.class"}}: </span>
+					<input name="data.description.category" type="text" value="{{data.description.category}}"/>
+				</div>
+				<div class="text_summary">
+					<span>{{localize "anima.background"}}: </span>
+					<input name="data.description.background" type="text" value="{{data.description.background}}"/>
+				</div>
 				<div class="xp-summary">
-					<span>LV: </span>
-					<input name="data.description.level.value" type="text" value="{{data.description.level.value}}" placeholder="Level" data-dtype="Number"/>
-					<span>XP: </span>
-					<input name="data.description.experience" type="text" value="{{data.description.experience}}" placeholder="XP" data-dtype="Number">
+					<span>{{localize "anima.level"}}: </span>
+					<input name="data.description.level.value" type="text" value="{{data.description.level.value}}" placeholder="0" data-dtype="Number"/>
+					<span>{{localize "anima.experience"}}: </span>
+					<input name="data.description.experience.value" type="text" value="{{data.description.experience.value}}" placeholder="0" data-dtype="Number">
 				</div>
 				<div class="gnosis">
-					<span>Nature: </span>
-					<input type="text" class="natue" name="data.description.nature.value" value="{{data.description.nature.value}}" placeholder="Nature" data-dtype="Number"/>
-					<span>Gnosis: </span>
-					<input type="text" class="gnosis" name="data.description.gnosis.value" value="{{data.description.gnosis.value}}" placeholder="Gnosis" data-dtype="Number"/>
+					<span>{{localize "anima.nature"}}: </span>
+					<input type="text" class="nature" name="data.description.nature.value" value="{{data.description.nature.value}}" placeholder="0" data-dtype="Number"/>
+					<span>{{localize "anima.gnosis"}}: </span>
+					<input type="text" class="gnosis" name="data.description.gnosis.value" value="{{data.description.gnosis.value}}" placeholder="0" data-dtype="Number"/>
 				</div>
 			</div>
 			<div class="common resources grid">
-				<input class="life" name="data.common.resources.life.points.value" type="text" value="{{data.common.resources.life.points.value}}">
+				<input class="life" name="data.common.resources.life.points.value" type="text" value="{{data.common.resources.life.points.value}}" placeholder="{{localize "anima.lifePoints"}}">
 				<div class="maxlife">
-					<span>Max. Life </span>
+					<span>{{localize "anima.maxLife"}} </span>
 					<input name="data.common.resources.life.points.max" type="text" value="{{data.common.resources.life.points.max}}" disabled>
 				</div>
 				<div class="regen">
 					<input type="text" name="data.secondaries.regeneration.value" value="{{data.secondaries.regeneration.value}}" disabled>
-					<span>Regen. </span>
+					<span>{{localize "anima.regenerationSHORT"}}</span>
 				</div>
 				<div class="movement">
-					<span> Movement </span>
+					<span> {{localize "anima.movementSHORT"}} </span>
 					<input type="text" name="data.secondaries.movement.value" value="{{data.secondaries.movement.value}}" disabled>
 				</div>
 				<div class="fatigue">
 					<input type="text" name="data.common.resources.fatigue.value" value="{{data.common.resources.fatigue.value}}">
-					<span> Fatigue</span>
+					<span> {{localize "anima.fatigue"}}</span>
 				</div>
 			</div>
 			<div class="mod grid">
-				<h3>Modificadores</h3>
+				<h3>{{localize "anima.modifiers"}}</h3>
 				<div class="rollable" data-roll="1d100xa"><i class="fas fa-dice-d20"></i></div>
 				<input type="text" class="mod." placeholder="Mod.">
 				<input type="text" class="pen" placeholder="Pen.">
